# Soir

./: .clang-format  .gitignore  Makefile  readme.md  soir.rsf  todo.md
include/: audio_utils.h  audiochannel.h  cleanup_queue.h  clock.h  engine_constants.h  envelope.h  event.h  event_queue.h  filters.h  fm_osc.h  noise_synth.h  note_pitches.h  oscillators.h  polybleposc.h  project.h  sample.h  sample_bank.h  sample_browser.h  samplers.h  sequencer.h  session.h  session_controller.h  synth.h  track.h  track_parameters.h  ui_constants.h  views.h  views_main.h
include/controllers/: controller_main.h  controller_quit.h  controller_sample_manager.h  controller_settings.h  controller_step_edit.h  controller_step_settings.h  controller_touch_clock.h  controller_touch_main.h  session_controller.h
include/threads/: audio_thread.h  clock_timer_thread.h
include/ui/: ui.h
romfs/gfx/: 2197Block.bcfnt  2197Heavy.bcfnt  F500Angular.bcfnt
romfs/samples/: bibop.opus  clap808.opus  hatClose.opus  hatOpen.opus  kick909.opus
source/: audio_utils.c  cleanup_queue.c  clock.c  envelope.c  event_queue.c  filters.c  fm_osc.c  main.c  newsol.md  noise_synth.c  polybleposc.c  sample.c  sample_bank.c  sample_browser.c  samplers.c  sequencer.c  session_controller.c  synth.c  track.c  track_parameters.c  views.c  views_main.c  views_modals.c  views_settings.c
source/controllers/: controller_main.c  controller_quit.c  controller_sample_manager.c  (+6 more)
tests/: CMakeLists.txt  mock_3ds.c  mock_3ds.h  test_clock.c  test_envelope.c  test_event_queue.c  test_runner.c  test_sequencer.c
(+16 files in other folders)
